# matera_challenge

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  manage.py  pyproject.toml
loan_api/: asgi.py  settings.py  urls.py  wsgi.py
loans/: admin.py  models.py  serializers.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_loan_iof_rate.py  0003_alter_payment_payment_value.py
scripts/: start-tests.sh  start.sh
tests/integration/: test_views.py
tests/unit/: test_models.py
